# Trae-cc

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLOUDFLARE_WORKER_SETUP.md  README.md  package-lock.json  package.json  test-update.ts  vite.config.ts  worker.js
.github/workflows/: build.yml
release/: latest.json
src/: App.css  App.tsx  api.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: browser_login.js  register_helper.js
src-tauri/scripts/: build_exe.py  register.js  requirements.txt  tempmail_socketio_client.py
src-tauri/src/: browser_auto_login.rs  custom_tempmail.rs  lib.rs  logger.rs  machine.rs  mail_client.rs  quick_register.rs  quick_register_backend.rs  quick_register_simple.rs  tempmail_client.rs
src-tauri/src/account/: account_manager.rs  types.rs
src-tauri/src/api/: mod.rs  trae_api.rs
src/api/: core.ts  index.ts  quickRegister.ts
src/components/: AccountCard.tsx  AccountListItem.tsx  AddAccountModal.tsx  ContextMenu.tsx  DashboardWidgets.tsx  DetailModal.tsx  ErrorBoundary.tsx  ErrorModal.css  ErrorModal.tsx  Icons.tsx  QuickRegisterModal.tsx  Sidebar.tsx  Toast.tsx  UpdateModal.tsx  UsageEvents.tsx  WorkerSetupGuide.tsx
src/hooks/: useToast.ts
src/pages/: About.tsx  Profile.tsx  Settings.tsx  Stats.tsx
src/types/: errorCodes.ts  index.ts
src/utils/: updateChecker.ts  userStorage.ts
