[package]
name = "Trae账号管理"
version = "1.0.0"
description = "Trae账号管理 - 管理 Trae 订阅账号使用量"
authors = ["HJH"]
edition = "2021"

[lib]
name = "trae_auto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
regex = "1"
directories = "5"
base64 = "0.22"
warp = "0.3"
once_cell = "1"
open = "5"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2.6.0"
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
